--- a/public/style/style.css
+++ b/public/style/style.css
@@ -60,12 +60,24 @@ form {
   font-size: 16px;
 }
 
+input {
+  display: block;
+  width: 100%;
+  height: 2rem;
+  border: 0;
+  border-radius: 8px;
+  padding: 8px;
+  font-size: 16px;
+  margin-top: 0.4rem;
+}
+
 select {
   display: block;
   width: 150px;
   height: 30px;
   border: 0;
   border-radius: 8px;
+  margin-top: 0.4rem;
   margin-bottom: 1rem;
   font-size: 16px;
 }
@@ -77,6 +89,16 @@ option {
 label {
   font-size: 16px;
   font-weight: 700;
+  display: block;
+  margin-bottom: 1rem;
+}
+
+#toneOfVoiceLabel {
+  display: none;
+}
+
+#keywordsLabel {
+  display: none;
 }
 
 textarea {
@@ -130,20 +152,29 @@ button:hover {
 /* Output Container */
 .outputContainer {
   width: 100%;
+  height: 100%;
   margin-top: 1rem;
 }
 
 #output {
-  margin-bottom: 6rem;
+  /* margin-bottom: 2rem; */
   display: flex;
   justify-content: flex-start;
   width: 100%;
+  height: 100%;
   min-height: 4rem;
-  background-color: var(--primary-color);
+  background-color: white;
+  border: 2px solid rgba(0, 0, 128, 0.344);
   border-radius: 8px;
-  color: white;
+  color: black;
   padding: 10px;
   font-size: 16px;
+}
+
+#copyBtn {
+  width: 200px;
+  height: 35px;
+  margin-top: 2rem;
 }
 
 footer {
