--- a/public/style/style.css
+++ b/public/style/style.css
@@ -104,8 +104,7 @@ label {
 
 .sliderContainer {
   width: 100%;
-  /* display: none; */
-  display: flex;
+  display: none;
   flex-direction: column;
 }
 
