--- a/public/style/style.css
+++ b/public/style/style.css
@@ -130,6 +130,19 @@ label {
   opacity: 1;
 }
 
+#mytokenRange {
+  margin-top: 0;
+  padding: 0;
+  opacity: 0.9;
+  cursor: pointer;
+  accent-color: navy;
+}
+
+#mytokenRange:hover {
+  accent-color: rgb(0, 0, 236);
+  opacity: 1;
+}
+
 textarea {
   display: block;
   width: 100%;
@@ -248,6 +261,10 @@ footer a:hover {
   }
 
   #myRange {
+    opacity: 0.5;
+  }
+
+  #mytokenRange {
     opacity: 0.5;
   }
 
