--- a/public/style/aiHelper.css
+++ b/public/style/aiHelper.css
@@ -23,16 +23,17 @@ body {
 /* Navbar */
 
 header {
+  padding-inline: 20px;
   height: 6rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   background-color: #f4f4f4;
 }
 
 header a {
   display: block;
-  width: 200px;
+  width: 150px;
 }
 
 header a img {
@@ -40,7 +41,40 @@ header a img {
   width: 100%;
 }
 
+#headerDivider {
+  margin: 0;
+  /* display: ; */
+}
+
+.desktopMenu {
+  display: none;
+}
+
+#mobileMenu {
+  width: 40px;
+  height: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.line {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  border-radius: 8px;
+}
+
 /* Main Area */
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  /* height: 1px; */
+  display: block;
+  opacity: 0.2;
+}
 
 .properEnglish {
   margin-top: 2rem;
@@ -69,6 +103,7 @@ input {
   border-radius: 8px;
   padding: 8px;
   font-size: 16px;
+  font-family: inherit;
   margin-top: 0.4rem;
 }
 
@@ -93,6 +128,7 @@ label {
   font-weight: 700;
   display: block;
   margin-bottom: 1rem;
+  font-family: inherit;
 }
 
 #toneOfVoiceLabel {
@@ -155,6 +191,7 @@ textarea {
   margin-top: 0.5rem;
   resize: vertical;
   font-size: 16px;
+  font-family: inherit;
 }
 
 .buttonDiv {
@@ -251,6 +288,59 @@ footer a:hover {
 }
 
 @media (min-width: 48rem) {
+  #mobileMenu {
+    display: none;
+  }
+
+  #headerDivider {
+    opacity: 0.5;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-inline: auto;
+    width: 90%;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin-inline: auto;
+  }
+
+  header a {
+    display: block;
+    text-decoration: none;
+    color: black;
+    width: 80px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.1rem;
+  }
+
+  nav a:hover {
+    text-decoration: underline dashed;
+  }
+
+  #logoutBtn {
+    width: 100px;
+    height: 30px;
+    background-color: rgb(0, 0, 236);
+    color: white;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+  }
+
+  .desktopMenu {
+    display: flex;
+  }
+
+  .desktopMenu nav {
+    display: flex;
+  }
+
   #sectionContainer {
     display: flex;
     justify-content: center;
@@ -290,13 +380,11 @@ footer a:hover {
   }
 }
 
-
 @media screen and (min-width: 64rem) {
   #sectionContainer {
     margin-inline: 3rem;
   }
 }
-
 
 @media screen and (min-width: 75rem) {
   #sectionContainer {
